--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
      <style>
 /* 外枠？*/
-.left-double-quote {
+.phoneic {
   color: #000;
   position: absolute;
   width: 17px;
   height: 11px;
 }
 
-.left-double-quote:before {
+.phoneic {
   content: '';
   position: absolute;
   top: 0;
@@ -26,7 +26,7 @@
           transform: rotate(55deg);
 }
 
-.left-double-quote:after {
+.phoneic:after {
   content: '';
   position: absolute;
   top: 15px;
@@ -39,7 +39,7 @@
           transform: rotate(50deg);
 }
 
-.left-double-quote.icon i:before {
+.phoneic.icon i:before {
   content: '';
   position: absolute;
   top: -5px;
@@ -54,7 +54,7 @@
           transform: rotate(-30deg);
 }
 
-.left-double-quote.icon i:after {
+.phoneic.icon i:after {
   content: '';
   position: absolute;
   top: 2px;
@@ -75,6 +75,6 @@
    
 
 
-<div class="left-double-quote icon"><i></i></div>
+<div class="phoneic icon"><i></i></div>
   </body>
 </html>
