--- a/index.html
+++ b/index.html
@@ -1,63 +1,12 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-     <style>
-/* 外枠？*/
-.phoneic {
-  color: #000;
-  position: absolute;
-  width: 17px;
-  height: 11px;
-}
-
-.phoneic {
-  content: '';
-  position: absolute;
-  top: 0;
-  width: 7px;
-  height: 6px;
-  border-radius: 30% 30% 50% 50%;
-  border: solid 1px currentColor;
-  -webkit-transform: rotate(55deg);
-          transform: rotate(55deg);
-}
-
-.phoneic:after {
-  content: '';
-  position: absolute;
-  top: 14px;
-  left: 8px;
-  width: 7px;
-  height: 6px;
-  border-radius: 30% 30% 50% 50%;
-  border: solid 1px currentColor;
-  -webkit-transform: rotate(50deg);
-          transform: rotate(50deg);
-}
-
-.phoneic.icon i:before {
-  content: '';
-  position: absolute;
-  top: -6px;
-  width: 26px;
-  height: 26px;
-  border-radius: 50%;
-  border-left: solid 1px currentColor;
-  border-top: solid 1px transparent;
-  border-right: solid 1px transparent;
   border-bottom: solid 1px transparent;
-  -webkit-transform: rotate(-30deg);
-          transform: rotate(-30deg);
+  -webkit-transform: rotate(20deg);
+  transform: rotate(20deg);
 }
 
-.phoneic.icon i:after {
+.phoneic-w i:after {
   content: '';
   position: absolute;
-  top: 1.5px;
+  top: -1px;
   left: 3px;
   width: 14px;
   height: 14px;
@@ -66,15 +15,8 @@
   border-top: solid 1px transparent;
   border-right: solid 1px transparent;
   border-bottom: solid 1px transparent;
-  -webkit-transform: rotate(-30deg);
-          transform: rotate(-30deg);
+  -webkit-transform: rotate(20deg);
+  transform: rotate(20deg);
 }
 </style>
-  </head>
-  <body>
-   
-
-
-<div class="phoneic icon"><i></i></div>
-  </body>
-</html>
+<div class="phoneic-w"><i></i></div>
