--- a/index.html
+++ b/index.html
@@ -1,3 +1,46 @@
+<style>
+.phoneic-w {
+  color: #000;
+  position: absolute;
+  width: 16px;
+  height: 11px;
+  -webkit-transform: rotate(-50deg);
+          transform: rotate(-50deg);
+}
+
+.phoneic-w:before,
+.phoneic-w:after {
+  content: '';
+  position: absolute;
+  width: 7px;
+  height: 6px;
+  border-radius: 30% 30% 50% 50%;
+  border: solid 1px currentColor;
+  -webkit-transform: rotate(115deg);
+          transform: rotate(115deg);
+}
+
+.phoneic-w:before {
+  top: -6px;
+  left: 7px;
+}
+
+.phoneic-w:after {
+  top: 10px;
+  left: 1px;
+}
+
+.phoneic-w i:before {
+  content: '';
+  position: absolute;
+  top: -6px;
+  left: 0;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  border-left: solid 1px currentColor;
+  border-top: solid 1px transparent;
+  border-right: solid 1px transparent;
   border-bottom: solid 1px transparent;
   -webkit-transform: rotate(20deg);
   transform: rotate(20deg);
